REFACTOR: 修改 onCommand、onTabComplete 中部分条件判断